	expand to cover the AVSwitch case.
	(Switch.eaterSetActive, Switch.eaterSetInactive): Debitrotten.
	Fold in common functionality from subclasses.
	(Switch.switch_to_for_event.feed_unavailable): Fix up for name
	changes.
	(SingleSwitch): Simplify, all code is in base class now.
	(AVSwitch.addError): New helper.
	(AVSwitch.do_check): Simplify with use of sets.

	* flumotion/component/padmonitor.py (PadMonitor.addWatch)
	(PadMonitor.addWatch, PadMonitor.setInactive)
	(PadMonitor.__init__): Manage a list of functions that can be
	notified when pads go active or inactive instead of just one pair
	of functions.

	* flumotion/component/eater.py (Eater.addWatch): New API, takes
	two functions, which will be called with the eater alias as an
	argument when an eater goes active or inactive, respectively.

2007-11-29  Johan Dahlin  <johan@gnome.org>

	* flumotion/wizard/productionsteps.py (FireWireStep): 
	Use ProxyWidgetMapping

2007-11-29  Pedro Gracia  <pedro@flumotion.com>

	* po/es.po: 
	Spanish 100% again

2007-11-29  Johan Dahlin  <johan@gnome.org>

	* flumotion/wizard/productionsteps.py (TVCardStep.errRemoteRunError): 
	Remove defer_generator_method, add a probing message like the webcam 
	component, clear the combos when a device is not found.
	(TVCardStep): use ProxyWidgetMapping
	(FireWireStep): Use ProxyWidgetMapping

	* configure.ac: kiwi not found, not kiwi found when kiwi is not found.

	* flumotion/wizard/productionsteps.py 
	(WebcamStep.on_combobox_size_changed): Set the height to the height 
	of the selected size and not the width!
	(WebcamStep._run_checks): Catch RemoteRunError and make it impossible
	to select the device when it does not exist.
	(TestVideoSourceStep, WebcamStep): use ProxyWidgetMapping
	(WebcamStep._run_checks): get_string->get_selected, forgot to merge this
	change from my rejected patch, grr.

2007-11-28  Pedro Gracia  <pedro@flumotion.com>

	* flumotion/admin/gtk/client.py: 
	Pretty print in XML export - fixes #801
